Fix carousel on mobile

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1004,7 +1004,7 @@ hr.gradient {
 	color: white;
 	// text-shadow: black  0.1em 0.1em 10px;
 	// box-shadow: black 0em 0em 10px -2px inset;
-	margin-top: 50px;
+	// margin-top: 50px;
 
 	// @include box-shadow-top-down();
 	// @include blur(5px, 0.99);
